# NFF

./: alembic.ini  pyproject.toml
src/notes_fastapi/: crud.py  database.py  main.py  models.py  schemas.py
