[project]
name = "notes-fastapi"
version = "0.1.0"
description = ""
authors = [
    {name = "Vikaa",email = "viktoriya_vlasova_00@list.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all] (>=0.121.1,<0.122.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "notes_fastapi", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
